Feature: Endpoint para el envio de mensajes de texto cifrados
